--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Chocolate</h3>
-                <p>Massa fofinha e super chocolatuda, e um sabor intenso e caseiro.</p>
+                <p>Massa fofinha e super chocolatuda, com sabor intenso e caseiro.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Chocolate." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -462,7 +462,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Limão Siciliano e Mirtilo</h3>
-                <p>Refrescante e equilibrado, com toque cítrico do limão siciliano e mirtilos frescos na massa.</p>
+                <p>Refrescante com limão siciliano e mirtilos frescos na massa.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Limão Siciliano e Mirtilo." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -474,7 +474,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Laranja</h3>
-                <p>Clássico da tarde, preparado com suco de laranja natural para um sabor cítrico suave e molhadinho.</p>
+                <p>Clássico molhadinho com suco de laranja natural cítrico.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Laranja." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -486,7 +486,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Milho</h3>
-                <p>Sabor caseiro, feito com milho selecionado para um sabor autêntico e textura macia.</p>
+                <p>Sabor caseiro autêntico com milho selecionado e macio.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Milho." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -498,7 +498,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Cenoura</h3>
-                <p>Massa vibrante e úmida de cenoura fresca, com aquele sabor caseiro que todos adoram.</p>
+                <p>Cenoura fresca, massa úmida com sabor caseiro irresistível.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Cenoura." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -510,7 +510,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Limão</h3>
-                <p>Leve, fofinho e levemente azedinho, com o frescor natural do limão em cada fatia.</p>
+                <p>Leve, fofinho e azedinho com frescor natural de limão.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Limão." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -522,7 +522,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Aipim</h3>
-                <p>Macio, molhadinho e cheio de sabor, feito com aipim fresco para um gosto tradicional e acolhedor.</p>
+                <p>Macio e molhadinho com aipim fresco e sabor tradicional.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Aipim." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -534,7 +534,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Red Velvet</h3>
-                <p>Elegante e aveludado, com massa vermelha suave e equilíbrio perfeito de cacau e baunilha.</p>
+                <p>Aveludado e elegante, massa vermelha com cacau e baunilha.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Red Velvet." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -546,7 +546,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Mesclado</h3>
-                <p>A melhor combinação: cenoura e chocolate, intenso em camadas irresistíveis.</p>
+                <p>Cenoura + chocolate em camadas intensas e irresistíveis.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Mesclado." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -570,7 +570,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo de Fubá</h3>
-                <p>Clássico e fofinho, com o sabor autêntico do fubá que lembra a casa da vó.</p>
+                <p>Clássico fofinho, sabor autêntico de fubá caseiro como os da vó.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo de Fubá." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
@@ -582,7 +582,7 @@
             </div>
             <div class="bolo-info">
                 <h3>Bolo Formigueiro</h3>
-                <p>Desmancha na boca, cheio de granulados de chocolate para um crocante delicioso na massa.</p>
+                <p>Desmancha na boca com granulados de chocolate crocantes.</p>
                 <a href="https://wa.me/5541991755009?text=Olá! Gostaria de encomendar um Bolo Formigueiro." target="_blank" class="btn-gold">Encomendar</a>
             </div>
         </div>
