--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-<!-- Favicon package - Usando o ícone enviado pelo usuário -->
-<link rel="icon" type="image/png" sizes="512x512" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/bWrYRYsTZlSqGGrd.png">
-<link rel="apple-touch-icon" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/bWrYRYsTZlSqGGrd.png">
+<!-- Favicon package - Ícones da Casa Mondego em múltiplas resoluções -->
+<link rel="icon" type="image/png" sizes="32x32" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/oicqteltreWtywgP.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/ItsHjbpupNQQxemS.png">
+<link rel="icon" type="image/png" sizes="512x512" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/nCpjQxDKMgQxdXDa.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://files.manuscdn.com/user_upload_by_module/session_file/310419663028551654/QEgXQWrJyUvHsmda.png">
 <meta name="theme-color" content="#000000">
 
 <link rel="profile" href="https://gmpg.org/xfn/11" />
